// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`map Photo base64 to object object should match snapshot 1`] = `File {}`;

exports[`map mapData should map data 1`] = `
Object {
  "education": Array [
    Object {
      "description": undefined,
      "endTime": Date { NaN },
      "place": "szkoła1",
      "startTime": Date { NaN },
    },
  ],
  "languages": Array [
    Object {
      "level": "A2",
      "name": "angielski",
    },
    Object {
      "level": "biegły",
      "name": "niemiecki",
    },
  ],
  "personalData": Object {
    "birthDate": 1999-12-31T23:00:00.000Z,
    "email": "qwe@qwe.qwe",
    "firstName": "Jan",
    "lastName": "Kowalski",
    "phoneNumber": "+48123456789",
  },
  "skills": Array [
    Object {
      "name": "taniec",
    },
    Object {
      "name": "śpiew",
    },
  ],
  "workExperience": Array [
    Object {
      "description": "stanowisko1",
      "endTime": Date { NaN },
      "place": "praca1",
      "startTime": Date { NaN },
    },
  ],
}
`;

exports[`map mapData should map data with empty experience array 1`] = `
Object {
  "education": Array [
    Object {
      "description": undefined,
      "endTime": Date { NaN },
      "place": "szkoła1",
      "startTime": Date { NaN },
    },
  ],
  "languages": Array [
    Object {
      "level": "A2",
      "name": "angielski",
    },
    Object {
      "level": "biegły",
      "name": "niemiecki",
    },
  ],
  "personalData": Object {
    "birthDate": 1999-12-31T23:00:00.000Z,
    "email": "qwe@qwe.qwe",
    "firstName": "Jan",
    "lastName": "Kowalski",
    "phoneNumber": "+48123456789",
  },
  "skills": Array [
    Object {
      "name": "taniec",
    },
    Object {
      "name": "śpiew",
    },
  ],
  "workExperience": Array [],
}
`;

exports[`map mapFeedback should match snapshot 1`] = `
Object {
  "education": "2",
  "languages": "5",
  "personalData": "1",
  "skills": "4",
  "workExperience": "3",
}
`;
